--- a/lincence.yml
+++ b/lincence.yml
@@ -1,10 +1,13 @@
+MIT License
 
----
+Copyright (c) 2025 Firoz Ansari
 
-## ⚙️ Step 5 — Commit and Push
-```bash
-git add .
-git commit -m "Initial version of ChatFormJS conversational form"
-git branch -M main
-git remote add origin https://github.com/<your-username>/ChatFormJS.git
-git push -u origin main
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+THE ABOVE COPYRIGHT NOTICE AND THIS PERMISSION NOTICE SHALL BE INCLUDED IN ALL
+COPIES OR SUBSTANTIAL PORTIONS OF THE SOFTWARE.
